# econ-theorist-ai-v2

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  NOTICE  README.md  TRANSFER_HANDOFF.md  pyproject.toml
craft/: corpus.v1.json  research_corpus.v1.json
craft/evidence/: kamenica_gentzkow_2011.metadata.json  synthetic_empirical_decoy.md  synthetic_formal_first_contrast.md  varian_1997_model_building.metadata.json
docs/architecture/: evaluation.md  implementation_plan.md  manuscript_compiler.md  profiles_and_craft.md  scenario_walkthroughs.md  scientific_discovery_craft.md  state_runtime.md  theory_kernel.md  v1_migration.md
docs/implementation/: framing_quality_contract.md  machine_protocol_v1.md  phase1_contract.md  phase2_contract.md  phase3_contract.md  phase4_contract.md  phase5a_contract.md  phase5b_framing_team_contract.md
machine/: compatibility-support.v1.json  host-manifest.v1.json  navigation-registry.v1.json  navigation-registry.v2.json  navigation-registry.v3.json  navigation-registry.v4.json  navigation-registry.v5.json  navigation-registry.v6.json  navigation-registry.v7.json
profiles/: catalog.v1.json
review_outputs/: phase5b_research_move_source_audit_v1.md  phase5b_score_disclosure_g4_park_closure.md  phase5b_score_disclosure_postmortem_and_research_move_proposal.md
review_outputs/phase5a2_codex_public_pilot/: candidate_attempt_1.json  completion_exact_retry_response.json  completion_request.redacted.json  continuation_host_facts.json  continuation_request.redacted.json  host_facts.json  initial_candidate_authoring_contract.json  initial_ready_summary.json  initial_work_packet.json  manifest.v1.json  pilot_report.md  quality_audit.md  repair_history.v1.json  start_permission_denied.redacted.json  start_request.redacted.json  state_summary.json
review_outputs/phase5a2_v5_1_codex_public_pilot/: evidence_inventory.md  failure_report.md  generator_case.md  generator_report.md  preflight_manifest.md  protocol.md
review_outputs/phase5a2_v5_2_codex_public_pilot/: evidence_inventory.json  evidence_inventory.md  failure_report.md  generator_case.md  generator_report.md  preflight_manifest.md  protocol.md  public_redaction_manifest.md
review_outputs/phase5a2_v5_3_codex_public_pilot/: economics_audit.md  evidence_inventory.md  failure_report.md  generator_report.md  machine_protocol_audit.md  preflight_manifest.md  protocol.md  public_redaction_manifest.md  reader_transfer_audit.md
review_outputs/phase5a2_v5_4_codex_public_pilot/: d1_terminal_note.md  d2_protocol.md  d2_terminal_note.md  diagnostic_protocol.md  diagnostic_root_amendment.md  evaluation_report.md  frozen_evaluation_key.md  generator_case.md  model_identity_gate_report.md  preflight_manifest.md  protocol.md
review_outputs/phase5a2_v5_5_economy_tier_audit/: audit_candidate.uncommitted.json  audit_terminal_completion_record.json  audit_work_packet.json  decompose_candidate.committed.json  independent_adversarial_audit.md  run_summary.md
review_outputs/phase5a2_v5_codex_public_pilot/: case.md  failure_report.md  preflight_manifest.md  protocol.md
review_outputs/phase5a2_v8_authoring_pair/: RESTART1_FINAL_DECISION.json  RESTART1_PHASE1_LOCK.json  case.md  frozen_evaluation_key.md  host_launch_erratum.md  preparation_record.md  protocol.md  restart1_cold_reader_evidence.md  restart1_final_adjudication.md  restart1_generation_freeze.md  restart1_phase1_scientific_adjudication.md  restart1_preparation_record.md
review_outputs/phase5a2_v8_authoring_pair_v2/: FINAL_DECISION.json  PACKAGED_RUNTIME_VERIFICATION.json  adjudication_stage1_freeze.md  adjudication_stage2_freeze.md  case.md  evidence_freeze.md  final_adjudication.md  frozen_evaluation_key.md  packaged_runtime_verification.md  preparation_record.md  protocol.md
review_outputs/phase5a2_v8_codex_public_pilot/: frozen_evaluation_key.md  generator_case.md  postflight_manifest.md  preflight_manifest.md  protocol.md  rerun_attempt1_operational_failure.md  rerun_attempt2_canonical_status.json  rerun_attempt2_cold_reader_input.md  rerun_attempt2_cold_reader_retell.md  rerun_attempt2_evaluator_package_manifest.md  rerun_attempt2_evaluator_prompt.md  rerun_attempt2_independent_evaluation_report.md  rerun_attempt2_postflight_manifest.md  rerun_protocol.md  (+14 more)
routes/: registry.v1.json  registry.v2.json  registry.v3.json  registry.v4.json  registry.v5.json  registry.v6.json  registry.v7.json  registry.v8.json
scripts/: capture_codex_invocation.py  export_authoring_schemas.py  export_framing_quality_schemas.py  export_machine_schemas.py  export_profile_craft_resources.py  export_profile_craft_schemas.py  export_schemas.py  export_theory_schemas.py  prepare_framing_authoring_pair.py  prepare_framing_authoring_pair_v2.py  publish_json_only_artifact.py  run_framing_authoring_shadow.py  run_non_long_tests.py
tests/: __init__.py  fault_worker.py  helpers.py  race_worker.py  test_codec_models.py  test_codex_bridge_focus_resolution.py  test_commit_recovery.py  test_concurrent_processes.py  test_context_runs.py  test_crash_subprocess.py  test_distribution_resources.py  test_doctor.py  test_evaluation_context.py  test_framing_authoring_shadow_harness.py  test_framing_quality_models.py  test_framing_quality_route.py  test_framing_quality_semantic_authoring.py  test_framing_research_first_constraints.py  test_phase1_frozen_bytes.py  test_phase2_back_half_contract.py  test_phase2_blind_evaluation_contract.py  test_phase2_blind_runtime.py  test_phase2_frozen_semantics.py  test_phase2_gate_runtime.py  test_phase2_gold_case.py  test_phase2_gold_runtime_chain.py  test_phase2_runtime_integration.py  test_phase2_scientific_closure.py  test_phase2_theory_models.py  test_phase2_theory_schema.py  test_phase2_theory_validation.py  test_phase3_artifact_protocols.py  test_phase3_assurance_evidence.py  test_phase3_assurance_harness.py  test_phase3_authoring_models.py  test_phase3_authoring_validation.py  test_phase3_context_isolation.py  test_phase3_downgrade_attacks.py  test_phase3_gold_runtime_chain.py  test_phase3_operational_lineage.py  (+40 more)
(+524 files in other folders)
