[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-theorist-ai"
version = "0.1.0"
description = "A theory-only, provenance-preserving research substrate"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yang Chen" }]
dependencies = [
  "pydantic==2.13.4",
  "pydantic-core==2.46.4",
]

[project.scripts]
etai = "econ_theorist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/econ-theorist/routes" = [
  "routes/registry.v1.json",
  "routes/registry.v2.json",
  "routes/registry.v3.json",
  "routes/registry.v4.json",
]
"share/econ-theorist/routes/instructions" = [
  "routes/instructions/frame.question_and_benchmarks.v1.txt",
  "routes/instructions/repair.dependency.v1.txt",
  "routes/instructions/audit.assumptions_generality_and_absorption.v2.txt",
  "routes/instructions/curate.result_portfolio.v2.txt",
  "routes/instructions/decompose.primitives.v2.txt",
  "routes/instructions/discover.claims_and_boundaries.v2.txt",
  "routes/instructions/evaluate.blind_argument_package.v2.txt",
  "routes/instructions/frame.question_and_benchmarks.v2.txt",
  "routes/instructions/freeze.predictions.v2.txt",
  "routes/instructions/lab.micro_examples_and_ablations.v2.txt",
  "routes/instructions/prepare.blind_case.v2.txt",
  "routes/instructions/promote.formal_base.v2.txt",
  "routes/instructions/promote.mechanism.v2.txt",
  "routes/instructions/repair.dependency.v2.txt",
  "routes/instructions/tournament.implementations.v2.txt",
  "routes/instructions/tournament.mechanisms.v2.txt",
  "routes/instructions/validate.argument_package.v2.txt",
  "routes/instructions/verify.claims_proofs_and_interpretation.v2.txt",
  "routes/instructions/theory_kernel.v1.json",
  "routes/instructions/adjudicate.reader_probe.v3.txt",
  "routes/instructions/answer.reader_probe.v3.txt",
  "routes/instructions/audit.argument_assurance.v3.txt",
  "routes/instructions/close.manuscript_review.v3.txt",
  "routes/instructions/compose.manuscript_unit.v3.txt",
  "routes/instructions/design.reader_path.v3.txt",
  "routes/instructions/prepare.reader_probe.v3.txt",
  "routes/instructions/record.human_effort.v3.txt",
  "routes/instructions/review.manuscript_unit.v3.txt",
  "routes/instructions/verify.independent_rederivation.v3.txt",
  "routes/instructions/map.obligation_predicate.v4.txt",
  "routes/instructions/audit.obligation_predicate.v4.txt",
  "routes/instructions/resolve.profile_stack.v4.txt",
  "routes/instructions/diagnose.reader_problem.v4.txt",
  "routes/instructions/retrieve.craft_moves.v4.txt",
  "routes/instructions/compose.profiled_manuscript_unit.v4.txt",
  "routes/instructions/review.craft_realization.v4.txt",
  "routes/instructions/close.profile_craft_review.v4.txt",
]
"share/econ-theorist/profiles" = [
  "profiles/catalog.v1.json",
]
"share/econ-theorist/craft" = [
  "craft/corpus.v1.json",
]
"share/econ-theorist/craft/evidence" = [
  "craft/evidence/kamenica_gentzkow_2011.metadata.json",
  "craft/evidence/varian_1997_model_building.metadata.json",
  "craft/evidence/synthetic_formal_first_contrast.md",
  "craft/evidence/synthetic_empirical_decoy.md",
]
