[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-theorist-ai"
version = "0.1.0"
description = "A theory-only, provenance-preserving research substrate"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yang Chen" }]
dependencies = [
  "pydantic==2.13.4",
  "pydantic-core==2.46.4",
]

[project.scripts]
etai = "econ_theorist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/econ-theorist/routes" = [
  "routes/registry.v1.json",
  "routes/registry.v2.json",
  "routes/registry.v3.json",
  "routes/registry.v4.json",
  "routes/registry.v5.json",
]
"share/econ-theorist/routes/instructions" = [
  "routes/instructions/frame.question_and_benchmarks.v1.txt",
  "routes/instructions/repair.dependency.v1.txt",
  "routes/instructions/audit.assumptions_generality_and_absorption.v2.txt",
  "routes/instructions/curate.result_portfolio.v2.txt",
  "routes/instructions/decompose.primitives.v2.txt",
  "routes/instructions/discover.claims_and_boundaries.v2.txt",
  "routes/instructions/evaluate.blind_argument_package.v2.txt",
  "routes/instructions/frame.question_and_benchmarks.v2.txt",
  "routes/instructions/freeze.predictions.v2.txt",
  "routes/instructions/lab.micro_examples_and_ablations.v2.txt",
  "routes/instructions/prepare.blind_case.v2.txt",
  "routes/instructions/promote.formal_base.v2.txt",
  "routes/instructions/promote.mechanism.v2.txt",
  "routes/instructions/repair.dependency.v2.txt",
  "routes/instructions/tournament.implementations.v2.txt",
  "routes/instructions/tournament.mechanisms.v2.txt",
  "routes/instructions/validate.argument_package.v2.txt",
  "routes/instructions/verify.claims_proofs_and_interpretation.v2.txt",
  "routes/instructions/theory_kernel.v1.json",
  "routes/instructions/adjudicate.reader_probe.v3.txt",
  "routes/instructions/answer.reader_probe.v3.txt",
  "routes/instructions/audit.argument_assurance.v3.txt",
  "routes/instructions/close.manuscript_review.v3.txt",
  "routes/instructions/compose.manuscript_unit.v3.txt",
  "routes/instructions/design.reader_path.v3.txt",
  "routes/instructions/prepare.reader_probe.v3.txt",
  "routes/instructions/record.human_effort.v3.txt",
  "routes/instructions/review.manuscript_unit.v3.txt",
  "routes/instructions/verify.independent_rederivation.v3.txt",
  "routes/instructions/map.obligation_predicate.v4.txt",
  "routes/instructions/audit.obligation_predicate.v4.txt",
  "routes/instructions/resolve.profile_stack.v4.txt",
  "routes/instructions/diagnose.reader_problem.v4.txt",
  "routes/instructions/retrieve.craft_moves.v4.txt",
  "routes/instructions/compose.profiled_manuscript_unit.v4.txt",
  "routes/instructions/review.craft_realization.v4.txt",
  "routes/instructions/close.profile_craft_review.v4.txt",
  "routes/instructions/audit.framing_economics.v5.txt",
]
"share/econ-theorist/profiles" = [
  "profiles/catalog.v1.json",
]
"share/econ-theorist/craft" = [
  "craft/corpus.v1.json",
]
"share/econ-theorist/craft/evidence" = [
  "craft/evidence/kamenica_gentzkow_2011.metadata.json",
  "craft/evidence/varian_1997_model_building.metadata.json",
  "craft/evidence/synthetic_formal_first_contrast.md",
  "craft/evidence/synthetic_empirical_decoy.md",
]
"share/econ-theorist/machine" = [
  "machine/navigation-registry.v1.json",
  "machine/navigation-registry.v2.json",
  "machine/navigation-registry.v3.json",
  "machine/host-manifest.v1.json",
  "machine/compatibility-support.v1.json",
]
"share/econ-theorist/schemas/v1" = [
  "schemas/v1/artifact-registration.schema.json",
  "schemas/v1/context-manifest.schema.json",
  "schemas/v1/decision.schema.json",
  "schemas/v1/entity-version.schema.json",
  "schemas/v1/relation-version.schema.json",
  "schemas/v1/route-run.schema.json",
  "schemas/v1/snapshot.schema.json",
  "schemas/v1/transaction.schema.json",
]
"share/econ-theorist/schemas/theory/v1" = [
  "schemas/theory/v1/absorption-assessment.schema.json",
  "schemas/theory/v1/assumption-map.schema.json",
  "schemas/theory/v1/benchmark-set.schema.json",
  "schemas/theory/v1/blind-case-manifest.schema.json",
  "schemas/theory/v1/claim-graph.schema.json",
  "schemas/theory/v1/closest-theory-map.schema.json",
  "schemas/theory/v1/economic-argument-graph.schema.json",
  "schemas/theory/v1/example-suite.schema.json",
  "schemas/theory/v1/formal-model.schema.json",
  "schemas/theory/v1/formalization-map.schema.json",
  "schemas/theory/v1/gate-dossier.schema.json",
  "schemas/theory/v1/implementation-tournament.schema.json",
  "schemas/theory/v1/literature-evidence.schema.json",
  "schemas/theory/v1/mechanism-hypothesis.schema.json",
  "schemas/theory/v1/mechanism-tournament.schema.json",
  "schemas/theory/v1/pre-result-brief.schema.json",
  "schemas/theory/v1/prediction-register.schema.json",
  "schemas/theory/v1/primitive-graph.schema.json",
  "schemas/theory/v1/proof-obligation.schema.json",
  "schemas/theory/v1/research-question.schema.json",
  "schemas/theory/v1/result-portfolio.schema.json",
  "schemas/theory/v1/transformed-variant-manifest.schema.json",
  "schemas/theory/v1/validated-argument-package.schema.json",
  "schemas/theory/v1/vapcomparison-record.schema.json",
  "schemas/theory/v1/verification-bundle.schema.json",
  "schemas/theory/v1/verification-record.schema.json",
]
"share/econ-theorist/schemas/authoring/v1" = [
  "schemas/authoring/v1/assurance-bundle.schema.json",
  "schemas/authoring/v1/critic-assignment.schema.json",
  "schemas/authoring/v1/human-effort-record.schema.json",
  "schemas/authoring/v1/manuscript-unit.schema.json",
  "schemas/authoring/v1/paper-ir.schema.json",
  "schemas/authoring/v1/re-derivation-record.schema.json",
  "schemas/authoring/v1/reader-path.schema.json",
  "schemas/authoring/v1/reader-probe-set.schema.json",
  "schemas/authoring/v1/reader-response.schema.json",
  "schemas/authoring/v1/resolved-profile-manifest.schema.json",
  "schemas/authoring/v1/result-contract-set.schema.json",
  "schemas/authoring/v1/review-closure.schema.json",
  "schemas/authoring/v1/review-finding.schema.json",
  "schemas/authoring/v1/review-record.schema.json",
  "schemas/authoring/v1/revision-brief.schema.json",
]
"share/econ-theorist/schemas/profile_craft/v1" = [
  "schemas/profile_craft/v1/craft-corpus-release.schema.json",
  "schemas/profile_craft/v1/craft-move.schema.json",
  "schemas/profile_craft/v1/craft-realization-assessment.schema.json",
  "schemas/profile_craft/v1/craft-selection-manifest.schema.json",
  "schemas/profile_craft/v1/craft-source-card.schema.json",
  "schemas/profile_craft/v1/obligation-predicate-contract.schema.json",
  "schemas/profile_craft/v1/predicate-mapping-audit.schema.json",
  "schemas/profile_craft/v1/profile-catalog-release.schema.json",
  "schemas/profile_craft/v1/profile-craft-closure.schema.json",
  "schemas/profile_craft/v1/profile-layer-card.schema.json",
  "schemas/profile_craft/v1/reader-problem-diagnosis.schema.json",
  "schemas/profile_craft/v1/resolved-profile-stack.schema.json",
  "schemas/profile_craft/v1/target-profile.schema.json",
]
"share/econ-theorist/schemas/framing_quality/v1" = [
  "schemas/framing_quality/v1/framing-quality-bundle.schema.json",
]
"share/econ-theorist/schemas/machine/v1" = [
  "schemas/machine/v1/bootstrap-descriptor.schema.json",
  "schemas/machine/v1/candidate-completion-result.schema.json",
  "schemas/machine/v1/capability-receipt.schema.json",
  "schemas/machine/v1/compatibility-probe.schema.json",
  "schemas/machine/v1/decision-confirmation-result.schema.json",
  "schemas/machine/v1/delivery-envelope.schema.json",
  "schemas/machine/v1/diagnostic.schema.json",
  "schemas/machine/v1/discovery-grant.schema.json",
  "schemas/machine/v1/egress-authorization.schema.json",
  "schemas/machine/v1/egress-plan.schema.json",
  "schemas/machine/v1/engine-manifest.schema.json",
  "schemas/machine/v1/engine-release-inventory.schema.json",
  "schemas/machine/v1/engine-release-manifest.schema.json",
  "schemas/machine/v1/engine-release-target.schema.json",
  "schemas/machine/v1/engine-resource.schema.json",
  "schemas/machine/v1/engine-verification.schema.json",
  "schemas/machine/v1/host-operation-receipt.schema.json",
  "schemas/machine/v1/human-approval-challenge.schema.json",
  "schemas/machine/v1/human-approval-receipt.schema.json",
  "schemas/machine/v1/install-plan.schema.json",
  "schemas/machine/v1/installed-distribution.schema.json",
  "schemas/machine/v1/ledger-event.schema.json",
  "schemas/machine/v1/machine-request.schema.json",
  "schemas/machine/v1/machine-response.schema.json",
  "schemas/machine/v1/navigation-candidate-key.schema.json",
  "schemas/machine/v1/navigation-plan.schema.json",
  "schemas/machine/v1/open-run-result.schema.json",
  "schemas/machine/v1/packet-delivery-result.schema.json",
  "schemas/machine/v1/project-binding.schema.json",
  "schemas/machine/v1/project-inspection.schema.json",
  "schemas/machine/v1/resume-descriptor.schema.json",
  "schemas/machine/v1/run-execution-view.schema.json",
  "schemas/machine/v1/run-input-brief.schema.json",
  "schemas/machine/v1/work-packet.schema.json",
]
